--- a/crates/backend/Cargo.toml
+++ b/crates/backend/Cargo.toml
@@ -38,3 +38,4 @@ mini-moka.workspace = true
 rustc-hash.workspace = true
 lexical-sort.workspace = true
 indexmap.workspace = true
+serde_with.workspace = true
