Add content write permission & use rust-cache

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,5 +1,8 @@
 name: CD
 
+permissions:
+  contents: write
+
 on:
   push:
     tags:
@@ -29,6 +32,8 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.platform.target }}
+
+      - uses: Swatinem/rust-cache@v2
 
       - name: Install needed packages on Linux
         run: sudo apt-get update --yes && sudo apt-get install --yes libssl-dev libdbus-1-dev libx11-xcb1 libxkbcommon-x11-dev pkg-config
