Add forge/neoforge support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,3 +94,5 @@ rayon = "1.11.0"
 rc-zip-sync = "4.4.2"
 relative-path = { version = "2.0.1", features = ["serde"] }
 shell-words = "1.1.1"
+serde-xml-rs = "0.8.2"
+memchr = "2.7.6"
