--- a/crates/backend/Cargo.toml
+++ b/crates/backend/Cargo.toml
@@ -48,6 +48,8 @@ rayon.workspace = true
 rc-zip-sync.workspace = true
 relative-path.workspace = true
 shell-words.workspace = true
+serde-xml-rs.workspace = true
+memchr.workspace = true
 
 [target.'cfg(target_os = "windows")'.dependencies]
 junction = "1.3.0"
