--- a/crates/frontend/Cargo.toml
+++ b/crates/frontend/Cargo.toml
@@ -34,6 +34,7 @@ serde.workspace = true
 serde_json.workspace = true
 rand.workspace = true
 relative-path.workspace = true
+parking_lot.workspace = true
 
 rust-i18n = "3.1.5"
 open = "5.2.0"
